--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -1863,6 +1863,7 @@
     <div class="container min-vh-100">
       <div class="d-flex justify-content-center align-items-center">
         <div class="feed-container w-100" style="max-width: 600px">
+          {% if user.is_authenticated %}
           {% if not profile.phone %}
           <div class="pt-2">
             <div class="alert alert-warning">
@@ -1871,7 +1872,9 @@
               update your profile.
             </div>
           </div>
-          {% endif %} {% if messages %} {% for message in messages %}
+          {% endif %}
+          {% endif %}
+           {% if messages %} {% for message in messages %}
           <div class="pt-2">
             <div class="alert alert-info">{{ message }}</div>
           </div>
