--- a/wera/templates/wera/base.html
+++ b/wera/templates/wera/base.html
@@ -1,10 +1,8 @@
 {% load static %} {% load socialaccount %}
 
 <!DOCTYPE html>
-<html class="no-js" lang="en">
-  {% load pwa %}
+<html lang="en">
   <head>
-    {% progressive_web_app_meta %}
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>{% block title %}{% endblock %}</title>
